# alchemy_practice

./: README.md  main.py  pyproject.toml  task_for_transactions.py
dao/: base.py
migrations/: env.py
migrations/versions/: 06e38c246be0_second.py  09fb92fac4e6_first.py  18bb9b7a56c4_relationship_fix_1.py  3567c7b13215_relationship_fix_3.py  75494d952393_fix.py  89dc5bbcbb5b_first_migration.py  a46478a00224_relationship_fix_2.py  c4f80546b137_fix.py  ca54ed5f6a2d_transactions.py  e7c7f8c6e899_transactions.py  eeb2b30b6f4b_relationship_fix.py  f93f0bf18b0a_omg.py
ordered_products/: dao.py  models.py  router.py  schema.py
orders/: dao.py  models.py  router.py  schema.py
product_photos/: dao.py  models.py  router.py  schema.py
products/: dao.py  models.py  router.py  schema.py
templates/: index.html
users/: models.py  router.py  schema.py
